prepend /v3 to paths and add allowable_x_tenant_ids to tenants model and APIs.
